--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "dad jokes",
+  "name": "Google-Meet-Attendance-Tracker",
   "version": "0.0.1",
   "manifest_version": 2,
   "permissions": ["tabs", "contextMenus", "https://meet.google.com/*"],
